runtime/src/iree-amd-aie/driver/xrt-lite/shim/linux/kmq/amdxdna_accel.h

#define AMDXDNA_ACCEL_H_
#define AMDXDNA_DRIVER_MAJOR 1
#define AMDXDNA_DRIVER_MINOR 0
#define AMDXDNA_INVALID_ADDR (~0UL)
#define AMDXDNA_INVALID_CTX_HANDLE 0
#define AMDXDNA_INVALID_BO_HANDLE 0
#define AMDXDNA_INVALID_FENCE_HANDLE 0
/*
 * The interface can grow/extend over time.
 * On each struct amdxdna_drm_*, to support potential extension, we defined it
 * like this.
 *
 * Example code:
 *
 * struct amdxdna_drm_example_data {
 *	.ext = (uintptr_t)&example_data_ext;
 *	...
 * };
 *
 * We don't have extension now. The extension struct will define in the future.
 */

enum amdxdna_drm_ioctl_id {
  DRM_AMDXDNA_CREATE_HWCTX,
  DRM_AMDXDNA_DESTROY_HWCTX,
  DRM_AMDXDNA_CONFIG_HWCTX,
  DRM_AMDXDNA_CREATE_BO,
  DRM_AMDXDNA_GET_BO_INFO,
  DRM_AMDXDNA_SYNC_BO,
  DRM_AMDXDNA_EXEC_CMD,
  DRM_AMDXDNA_WAIT_CMD,
  DRM_AMDXDNA_GET_INFO,
  DRM_AMDXDNA_SET_STATE,
  DRM_AMDXDNA_NUM_IOCTLS
};
enum amdxdna_device_type {
  AMDXDNA_DEV_TYPE_UNKNOWN = -1,
  AMDXDNA_DEV_TYPE_KMQ,
  AMDXDNA_DEV_TYPE_UMQ,
};
enum amdxdna_drm_config_hwctx_param {
  DRM_AMDXDNA_HWCTX_CONFIG_CU,
  DRM_AMDXDNA_HWCTX_ASSIGN_DBG_BUF,
  DRM_AMDXDNA_HWCTX_REMOVE_DBG_BUF,
  DRM_AMDXDNA_HWCTX_CONFIG_NUM
};
/*
 * AMDXDNA_BO_SHMEM:	DRM GEM SHMEM bo
 * AMDXDNA_BO_DEV_HEAP: Shared host memory to device as heap memory
 * AMDXDNA_BO_DEV_BO:	Allocated from BO_DEV_HEAP
 * AMDXDNA_BO_CMD:	User and driver accessible bo
 * AMDXDNA_BO_DMA:	DRM GEM DMA bo
 */
enum amdxdna_bo_type {
  AMDXDNA_BO_INVALID = 0,
  AMDXDNA_BO_SHMEM,
  AMDXDNA_BO_DEV_HEAP,
  AMDXDNA_BO_DEV,
  AMDXDNA_BO_CMD,
  AMDXDNA_BO_DMA,
};
enum amdxdna_cmd_type {
  AMDXDNA_CMD_SUBMIT_EXEC_BUF = 0,
  AMDXDNA_CMD_SUBMIT_DEPENDENCY,
  AMDXDNA_CMD_SUBMIT_SIGNAL,
};
enum amdxdna_sensor_type { AMDXDNA_SENSOR_TYPE_POWER };
enum amdxdna_power_mode_type {
  POWER_MODE_DEFAULT, /**< Fallback to calculated DPM */
  POWER_MODE_LOW,     /**< Set frequency to lowest DPM */
  POWER_MODE_MEDIUM,  /**< Set frequency to medium DPM */
  POWER_MODE_HIGH,    /**< Set frequency to highest DPM */
  POWER_MODE_TURBO,   /**< More power, more performance */
};
enum amdxdna_drm_get_param {
  DRM_AMDXDNA_QUERY_AIE_STATUS,
  DRM_AMDXDNA_QUERY_AIE_METADATA,
  DRM_AMDXDNA_QUERY_AIE_VERSION,
  DRM_AMDXDNA_QUERY_CLOCK_METADATA,
  DRM_AMDXDNA_QUERY_SENSORS,
  DRM_AMDXDNA_QUERY_HW_CONTEXTS,
  DRM_AMDXDNA_READ_AIE_MEM,
  DRM_AMDXDNA_READ_AIE_REG,
  DRM_AMDXDNA_QUERY_FIRMWARE_VERSION,
  DRM_AMDXDNA_GET_POWER_MODE,
  DRM_AMDXDNA_QUERY_TELEMETRY,
  DRM_AMDXDNA_NUM_GET_PARAM,
};
/**
 * struct amdxdna_drm_get_info - Get some information from the AIE hardware.
 * @param: Value in enum amdxdna_drm_get_param. Specifies the structure passed
 * in the buffer.
 * @buffer_size: Size of the input buffer. Size needed/written by the kernel.
 * @buffer: A structure specified by the param struct member.
 */
struct amdxdna_drm_get_info {
  __u32 param;       /* in */
  __u32 buffer_size; /* in/out */
  __u64 buffer;      /* in/out */
};
enum amdxdna_drm_set_param {
  DRM_AMDXDNA_SET_POWER_MODE,
  DRM_AMDXDNA_WRITE_AIE_MEM,
  DRM_AMDXDNA_WRITE_AIE_REG,
  DRM_AMDXDNA_NUM_SET_PARAM,
};
/**
 * struct amdxdna_drm_set_state - Set the state of some component within the AIE
 * hardware.
 * @param: Value in enum amdxdna_drm_set_param. Specifies the structure passed
 * in the buffer.
 * @buffer_size: Size of the input buffer.
 * @buffer: A structure specified by the param struct member.
 */
struct amdxdna_drm_set_state {
  __u32 param;       /* in */
  __u32 buffer_size; /* in */
  __u64 buffer;      /* in */
};
#define DRM_IOCTL_AMDXDNA_GET_INFO \
  DRM_IOWR(DRM_COMMAND_BASE + DRM_AMDXDNA_GET_INFO, struct amdxdna_drm_get_info)
#define DRM_IOCTL_AMDXDNA_SET_STATE                  \
  DRM_IOWR(DRM_COMMAND_BASE + DRM_AMDXDNA_SET_STATE, \
           struct amdxdna_drm_set_state)