build_tools/ci/amdxdna_driver_utils/amdxdna_accel.py


struct_amdxdna_drm_query_aie_status._pack_ = 1  # source:False
struct_amdxdna_drm_query_aie_status._fields_ = [
    ("buffer", ctypes.c_uint64),
    ("buffer_size", ctypes.c_uint32),
    ("cols_filled", ctypes.c_uint32),
]


class struct_amdxdna_drm_query_aie_version(Structure):
    pass


struct_amdxdna_drm_query_aie_version._pack_ = 1  # source:False
struct_amdxdna_drm_query_aie_version._fields_ = [
    ("major", ctypes.c_uint32),
    ("minor", ctypes.c_uint32),
]


class struct_amdxdna_drm_query_aie_tile_metadata(Structure):
    pass


struct_amdxdna_drm_query_aie_tile_metadata._pack_ = 1  # source:False
struct_amdxdna_drm_query_aie_tile_metadata._fields_ = [
    ("row_count", ctypes.c_uint16),
    ("row_start", ctypes.c_uint16),
    ("dma_channel_count", ctypes.c_uint16),
    ("lock_count", ctypes.c_uint16),
    ("event_reg_count", ctypes.c_uint16),
    ("pad", ctypes.c_uint16 * 3),
]


class struct_amdxdna_drm_query_aie_metadata(Structure):
    pass


struct_amdxdna_drm_query_aie_metadata._pack_ = 1  # source:False
struct_amdxdna_drm_query_aie_metadata._fields_ = [
    ("col_size", ctypes.c_uint32),
    ("cols", ctypes.c_uint16),
    ("rows", ctypes.c_uint16),
    ("version", struct_amdxdna_drm_query_aie_version),
    ("core", struct_amdxdna_drm_query_aie_tile_metadata),
    ("mem", struct_amdxdna_drm_query_aie_tile_metadata),
    ("shim", struct_amdxdna_drm_query_aie_tile_metadata),
]


class struct_amdxdna_drm_query_clock(Structure):
    pass


struct_amdxdna_drm_query_clock._pack_ = 1  # source:False
struct_amdxdna_drm_query_clock._fields_ = [
    ("name", ctypes.c_ubyte * 16),
    ("freq_mhz", ctypes.c_uint32),
    ("pad", ctypes.c_uint32),
]


class struct_amdxdna_drm_query_clock_metadata(Structure):
    _pack_ = 1  # source:False
    _fields_ = [
        ("mp_npu_clock", struct_amdxdna_drm_query_clock),
        ("h_clock", struct_amdxdna_drm_query_clock),
    ]


# values for enumeration 'amdxdna_sensor_type'
amdxdna_sensor_type__enumvalues = {
    0: "AMDXDNA_SENSOR_TYPE_POWER",
}
AMDXDNA_SENSOR_TYPE_POWER = 0
amdxdna_sensor_type = ctypes.c_uint32  # enum


class struct_amdxdna_drm_query_sensor(Structure):
    pass


struct_amdxdna_drm_query_sensor._pack_ = 1  # source:False
struct_amdxdna_drm_query_sensor._fields_ = [
    ("label", ctypes.c_ubyte * 64),
    ("input", ctypes.c_uint32),
    ("max", ctypes.c_uint32),
    ("average", ctypes.c_uint32),
    ("highest", ctypes.c_uint32),
    ("status", ctypes.c_ubyte * 64),
    ("units", ctypes.c_ubyte * 16),
    ("unitm", ctypes.c_byte),
    ("type", ctypes.c_ubyte),
    ("pad", ctypes.c_ubyte * 6),
]


class struct_amdxdna_drm_query_hwctx(Structure):
    pass


struct_amdxdna_drm_query_hwctx._pack_ = 1  # source:False
struct_amdxdna_drm_query_hwctx._fields_ = [
    ("context_id", ctypes.c_uint32),
    ("start_col", ctypes.c_uint32),
    ("num_col", ctypes.c_uint32),
    ("pad", ctypes.c_uint32),
    ("pid", ctypes.c_int64),
    ("command_submissions", ctypes.c_uint64),
    ("command_completions", ctypes.c_uint64),
    ("migrations", ctypes.c_uint64),
    ("preemptions", ctypes.c_uint64),
    ("errors", ctypes.c_uint64),
]


class struct_amdxdna_drm_aie_mem(Structure):
    pass


struct_amdxdna_drm_aie_mem._pack_ = 1  # source:False
struct_amdxdna_drm_aie_mem._fields_ = [
    ("col", ctypes.c_uint32),
    ("row", ctypes.c_uint32),
    ("addr", ctypes.c_uint32),
    ("size", ctypes.c_uint32),
    ("buf_p", ctypes.c_uint64),
]


class struct_amdxdna_drm_aie_reg(Structure):
    pass


struct_amdxdna_drm_aie_reg._pack_ = 1  # source:False
struct_amdxdna_drm_aie_reg._fields_ = [
    ("col", ctypes.c_uint32),
    ("row", ctypes.c_uint32),
    ("addr", ctypes.c_uint32),
    ("val", ctypes.c_uint32),
]

# values for enumeration 'amdxdna_power_mode_type'
amdxdna_power_mode_type__enumvalues = {
    0: "POWER_MODE_DEFAULT",
    1: "POWER_MODE_LOW",
    2: "POWER_MODE_MEDIUM",
    3: "POWER_MODE_HIGH",
}
POWER_MODE_DEFAULT = 0
POWER_MODE_LOW = 1
POWER_MODE_MEDIUM = 2
POWER_MODE_HIGH = 3
amdxdna_power_mode_type = ctypes.c_uint32  # enum


class struct_amdxdna_drm_get_power_mode(Structure):
    pass


struct_amdxdna_drm_get_power_mode._pack_ = 1  # source:False
struct_amdxdna_drm_get_power_mode._fields_ = [
    ("power_mode", ctypes.c_ubyte),
    ("pad", ctypes.c_ubyte * 7),
]


class struct_amdxdna_drm_query_firmware_version(Structure):
    pass


struct_amdxdna_drm_query_firmware_version._pack_ = 1  # source:False
struct_amdxdna_drm_query_firmware_version._fields_ = [
    ("major", ctypes.c_uint32),
    ("minor", ctypes.c_uint32),
    ("patch", ctypes.c_uint32),
    ("build", ctypes.c_uint32),
]

# values for enumeration 'amdxdna_drm_get_param'
amdxdna_drm_get_param__enumvalues = {
    0: "DRM_AMDXDNA_QUERY_AIE_STATUS",
    1: "DRM_AMDXDNA_QUERY_AIE_METADATA",
    2: "DRM_AMDXDNA_QUERY_AIE_VERSION",
    3: "DRM_AMDXDNA_QUERY_CLOCK_METADATA",
    4: "DRM_AMDXDNA_QUERY_SENSORS",
    5: "DRM_AMDXDNA_QUERY_HW_CONTEXTS",
    6: "DRM_AMDXDNA_READ_AIE_MEM",
    7: "DRM_AMDXDNA_READ_AIE_REG",
    8: "DRM_AMDXDNA_QUERY_FIRMWARE_VERSION",
    9: "DRM_AMDXDNA_GET_POWER_MODE",
    10: "DRM_AMDXDNA_NUM_GET_PARAM",
}
DRM_AMDXDNA_QUERY_AIE_STATUS = 0
DRM_AMDXDNA_QUERY_AIE_METADATA = 1
DRM_AMDXDNA_QUERY_AIE_VERSION = 2
DRM_AMDXDNA_QUERY_CLOCK_METADATA = 3
DRM_AMDXDNA_QUERY_SENSORS = 4
DRM_AMDXDNA_QUERY_HW_CONTEXTS = 5
DRM_AMDXDNA_READ_AIE_MEM = 6
DRM_AMDXDNA_READ_AIE_REG = 7
DRM_AMDXDNA_QUERY_FIRMWARE_VERSION = 8
DRM_AMDXDNA_GET_POWER_MODE = 9
DRM_AMDXDNA_NUM_GET_PARAM = 10
amdxdna_drm_get_param = ctypes.c_uint32  # enum


class struct_amdxdna_drm_get_info(Structure):
    pass


struct_amdxdna_drm_get_info._pack_ = 1  # source:False
struct_amdxdna_drm_get_info._fields_ = [
    ("param", ctypes.c_uint32),
    ("buffer_size", ctypes.c_uint32),
    ("buffer", ctypes.c_uint64),
]


# DRM_IOCTL_AMDXDNA_GET_INFO = DRM_IOWR ( DRM_COMMAND_BASE + DRM_AMDXDNA_GET_INFO , struct_amdxdna_drm_get_info ) # macro
class struct_amdxdna_drm_set_power_mode(Structure):
    pass


struct_amdxdna_drm_set_power_mode._pack_ = 1  # source:False
struct_amdxdna_drm_set_power_mode._fields_ = [
    ("power_mode", ctypes.c_ubyte),
    ("pad", ctypes.c_ubyte * 7),
]

# values for enumeration 'amdxdna_drm_set_param'
amdxdna_drm_set_param__enumvalues = {
    0: "DRM_AMDXDNA_SET_POWER_MODE",
    1: "DRM_AMDXDNA_WRITE_AIE_MEM",
    2: "DRM_AMDXDNA_WRITE_AIE_REG",
    3: "DRM_AMDXDNA_NUM_SET_PARAM",
}
DRM_AMDXDNA_SET_POWER_MODE = 0
DRM_AMDXDNA_WRITE_AIE_MEM = 1
DRM_AMDXDNA_WRITE_AIE_REG = 2
DRM_AMDXDNA_NUM_SET_PARAM = 3
amdxdna_drm_set_param = ctypes.c_uint32  # enum


class struct_amdxdna_drm_set_state(Structure):
    pass


struct_amdxdna_drm_set_state._pack_ = 1  # source:False
struct_amdxdna_drm_set_state._fields_ = [
    ("param", ctypes.c_uint32),
    ("buffer_size", ctypes.c_uint32),
    ("buffer", ctypes.c_uint64),
]


# DRM_IOCTL_AMDXDNA_SET_STATE = DRM_IOWR ( DRM_COMMAND_BASE + DRM_AMDXDNA_SET_STATE , struct_amdxdna_drm_set_state ) # macro
class struct_amdxdna_drm_syncobjs(Structure):
    pass


struct_amdxdna_drm_syncobjs._pack_ = 1  # source:False
struct_amdxdna_drm_syncobjs._fields_ = [
    ("handles", ctypes.c_uint64),
    ("points", ctypes.c_uint64),
    ("count", ctypes.c_uint32),
    ("pad", ctypes.c_uint32),
]


def struct_amdxdna_cmd_chain(command_count):
    class struct_amdxdna_cmd_chain(Structure):
        pass

    struct_amdxdna_cmd_chain._pack_ = 1  # source:False
    struct_amdxdna_cmd_chain._fields_ = [
        ("command_count", ctypes.c_uint32),
        ("submit_index", ctypes.c_uint32),
        ("error_index", ctypes.c_uint32),
        ("reserved", ctypes.c_uint32 * 3),
        ("data", ctypes.c_uint64 * command_count),
    ]
    return struct_amdxdna_cmd_chain


def struct_amdxdna_cmd(count):
    class struct_amdxdna_cmd(Structure):
        pass

    struct_amdxdna_cmd._pack_ = 1  # source:False
    struct_amdxdna_cmd._fields_ = [
        ("state", ctypes.c_uint32, 4),
        ("unused", ctypes.c_uint32, 6),
        ("extra_cu_masks", ctypes.c_uint32, 2),
        ("count", ctypes.c_uint32, 11),
        ("opcode", ctypes.c_uint32, 5),
        ("reserved", ctypes.c_uint32, 4),
        ("data", ctypes.c_uint32 * count),
    ]
    return struct_amdxdna_cmd


# DRM_IOCTL_AMDXDNA_SUBMIT_WAIT = DRM_IOWR ( DRM_COMMAND_BASE + DRM_AMDXDNA_SUBMIT_WAIT , struct_amdxdna_drm_syncobjs ) # macro
# DRM_IOCTL_AMDXDNA_SUBMIT_SIGNAL = DRM_IOWR ( DRM_COMMAND_BASE + DRM_AMDXDNA_SUBMIT_SIGNAL , struct_amdxdna_drm_syncobjs ) # macro
__all__ = [
    "AMDXDNA_ACCEL_H_",
    "AMDXDNA_BO_CMD",
    "AMDXDNA_BO_DEV",
    "AMDXDNA_BO_DEV_HEAP",
    "AMDXDNA_BO_DMA",
    "AMDXDNA_BO_INVALID",
    "AMDXDNA_BO_SHMEM",
    "AMDXDNA_CMD_SUBMIT_DEPENDENCY",
    "AMDXDNA_CMD_SUBMIT_EXEC_BUF",
    "AMDXDNA_CMD_SUBMIT_SIGNAL",
    "AMDXDNA_DEV_TYPE_KMQ",
    "AMDXDNA_DEV_TYPE_UMQ",
    "AMDXDNA_DEV_TYPE_UNKNOWN",
    "AMDXDNA_DRIVER_MAJOR",
    "AMDXDNA_DRIVER_MINOR",
    "AMDXDNA_INVALID_ADDR",
    "AMDXDNA_INVALID_BO_HANDLE",
    "AMDXDNA_INVALID_CMD_HANDLE",
    "AMDXDNA_INVALID_CTX_HANDLE",
    "AMDXDNA_INVALID_FENCE_HANDLE",
    "AMDXDNA_SENSOR_TYPE_POWER",
    "DRM_AMDXDNA_CONFIG_HWCTX",
    "DRM_AMDXDNA_CREATE_BO",
    "DRM_AMDXDNA_CREATE_HWCTX",
    "DRM_AMDXDNA_DESTROY_HWCTX",
    "DRM_AMDXDNA_EXEC_CMD",
    "DRM_AMDXDNA_GET_BO_INFO",
    "DRM_AMDXDNA_GET_INFO",
    "DRM_AMDXDNA_GET_POWER_MODE",
    "DRM_AMDXDNA_HWCTX_ASSIGN_DBG_BUF",
    "DRM_AMDXDNA_HWCTX_CONFIG_CU",
    "DRM_AMDXDNA_HWCTX_CONFIG_NUM",
    "DRM_AMDXDNA_HWCTX_REMOVE_DBG_BUF",
    "DRM_AMDXDNA_NUM_GET_PARAM",
    "DRM_AMDXDNA_NUM_IOCTLS",
    "DRM_AMDXDNA_NUM_SET_PARAM",
    "DRM_AMDXDNA_QUERY_AIE_METADATA",
    "DRM_AMDXDNA_QUERY_AIE_STATUS",
    "DRM_AMDXDNA_QUERY_AIE_VERSION",
    "DRM_AMDXDNA_QUERY_CLOCK_METADATA",
    "DRM_AMDXDNA_QUERY_FIRMWARE_VERSION",
    "DRM_AMDXDNA_QUERY_HW_CONTEXTS",
    "DRM_AMDXDNA_QUERY_SENSORS",
    "DRM_AMDXDNA_READ_AIE_MEM",
    "DRM_AMDXDNA_READ_AIE_REG",
    "DRM_AMDXDNA_SET_POWER_MODE",
    "DRM_AMDXDNA_SET_STATE",
    "DRM_AMDXDNA_SUBMIT_SIGNAL",
    "DRM_AMDXDNA_SUBMIT_WAIT",
    "DRM_AMDXDNA_SYNC_BO",
    "DRM_AMDXDNA_WAIT_CMD",
    "DRM_AMDXDNA_WRITE_AIE_MEM",
    "DRM_AMDXDNA_WRITE_AIE_REG",
    "POWER_MODE_DEFAULT",
    "POWER_MODE_HIGH",
    "POWER_MODE_LOW",
    "POWER_MODE_MEDIUM",
    "SYNC_DIRECT_FROM_DEVICE",
    "SYNC_DIRECT_TO_DEVICE",
    "amdxdna_bo_type",
    "amdxdna_cmd_type",
    "amdxdna_device_type",
    "amdxdna_drm_config_hwctx_param",
    "amdxdna_drm_get_param",
    "amdxdna_drm_ioctl_id",
    "amdxdna_drm_set_param",
    "amdxdna_power_mode_type",
    "amdxdna_sensor_type",
    "struct_amdxdna_cu_config",
    "struct_amdxdna_drm_aie_mem",
    "struct_amdxdna_drm_aie_reg",
    "struct_amdxdna_drm_config_hwctx",
    "struct_amdxdna_drm_create_bo",
    "struct_amdxdna_drm_create_hwctx",
    "struct_amdxdna_drm_destroy_hwctx",
    "struct_amdxdna_drm_exec_cmd",
    "struct_amdxdna_drm_get_bo_info",
    "struct_amdxdna_drm_get_info",
    "struct_amdxdna_drm_get_power_mode",
    "struct_amdxdna_drm_query_aie_metadata",
    "struct_amdxdna_drm_query_aie_status",
    "struct_amdxdna_drm_query_aie_tile_metadata",
    "struct_amdxdna_drm_query_aie_version",
    "struct_amdxdna_drm_query_clock",
    "struct_amdxdna_drm_query_clock_metadata",
    "struct_amdxdna_drm_query_firmware_version",
    "struct_amdxdna_drm_query_hwctx",
    "struct_amdxdna_drm_query_sensor",
    "struct_amdxdna_drm_set_power_mode",
    "struct_amdxdna_drm_set_state",
    "struct_amdxdna_drm_sync_bo",
    "struct_amdxdna_drm_syncobjs",
    "struct_amdxdna_drm_wait_cmd",
    "struct_amdxdna_hwctx_param_config_cu",
    "struct_amdxdna_qos_info",
    "struct_amdxdna_cmd_chain",
    "struct_amdxdna_cmd",
]
